--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/browser-kit-testing": "^2.0",
+        "laravel/homestead": "^6.5",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0",
-        "laravel/homestead": "^6.5"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
