--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
         "league/csv": "^9.1",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "yab/laravel-scout-mysql-driver": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
