--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "kahlan/kahlan": "^4.1",
         "laravel/browser-kit-testing": "^2.0",
         "laravel/homestead": "^6.5",
         "mockery/mockery": "~1.0",
